# movie-picker

./: .env  Dockerfile  LICENSE.md  README.md  __init__.py  main.py  pyproject.toml
dataset/: movies.csv
src/: app.py  config.py  data_loader.py  recommendation_model.py  tmdb_api.py  user_state.py  utils.py
static/: styles.css
templates/: index.html  liked.html  stats.html  watchlist.html
